# goby

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-CODE  LICENSE-DOCS  MVP.md  README.md  REPO_MANIFEST.md
.codex-devflow/: commands.env
.config/: nextest.toml
crates/goby-wasm/: Cargo.toml
crates/goby-wasm/src/: backend.rs  call.rs  compile_tests.rs  effect_handler_legality.rs  effect_handler_lowering.rs  execution_plan.rs  fallback.rs  grapheme_semantics.rs  host_runtime.rs  layout.rs  lib.rs  lower.rs  memory_config.rs  planning.rs  print_codegen.rs  runtime_apply.rs  runtime_behavior_tests.rs  runtime_decl.rs  runtime_dispatch.rs  runtime_entry.rs  runtime_env.rs  runtime_eval.rs  runtime_exec.rs  runtime_expr.rs  runtime_flow.rs  runtime_io_plan.rs  runtime_ir_adapter.rs  runtime_output_tests.rs  runtime_parity.rs  runtime_replay.rs  runtime_resolver.rs  runtime_resume_tests.rs  runtime_rr_tests.rs  runtime_support.rs  runtime_unit.rs  runtime_value.rs  size_class.rs  support.rs  wasm_exec.rs  wasm_exec_plan.rs
crates/goby-wasm/src/gen_lower/: backend_ir.rs  closure_env.rs  emit.rs  lower.rs  mod.rs  ptr.rs  value.rs
crates/goby-wasm/tests/: alloc_baseline.rs  alloc_baseline.txt  wasm_exports_and_smoke.rs
crates/goby-wasm/tests/fixtures/acceptance/: hof_fold_print.out
crates/goby-wasm/tests/fixtures/alloc-baseline/: real_world_driver.gb  refcount_reuse_loop.gb
crates/goby-wasm/tests/fixtures/runtime-io-general-lowering/: split_lines_each.gb
doc/: BUGS.md  EFFECT_HANDLER_RESOLUTION.md  EFFECT_RENEWAL_MIGRATION.md  LANGUAGE_SPEC.md  (+26 more)
(+234 files in other folders)
