[package]
name = "goby-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[features]
default = []
typed-continuation-optimized = []
wasmfx-experimental = []

[dependencies]
goby-core = { path = "../goby-core" }
wasm-encoder = "0.240"
unicode-segmentation = "1.12"
wasmtime = { version = "43", default-features = false, features = ["cranelift", "runtime"] }
wasmtime-wasi = "43"

[dev-dependencies]
wasmparser = "0.240"
